--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
+    "@tailwindcss/vite": "^4.1.15",
     "vite": "^7.1.7"
   }
 }
