deletar arquivos antigos

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,5 @@ jobs:
           local-dir: './dist/'
           protocol: ftps
           port: 21
+          delete-removed: true
           log-level: verbose
