--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,39 @@
 name: Deploy React Portfolio (Hostinger)
 
 on:
-  push:
-    branches:
-      - main
+  push:
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repositório
-        uses: actions/checkout@v4
+ steps:
+      - name: Checkout Repositório
+        uses: actions/checkout@v4
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      - name: Instalar Dependências
-        run: npm install
+      - name: Instalar Dependências
+        run: npm install
 
-      - name: Build do Projeto React
-        run: npm run build
+      - name: Build do Projeto React
+        run: npm run build
 
-      - name: Sincronizar Arquivos com Hostinger
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: ${{ secrets.FTP_PATH }}
-          local-dir: './dist/'
-          protocol: ftps
-          port: 21
-          delete-removed: true
-          log-level: verbose
+      - name: Sincronizar Arquivos com Hostinger
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: ${{ secrets.FTP_PATH }}
+          local-dir: './dist/*'
+          protocol: ftps
+          port: 21
+          delete-removed: true
+          ftp-mode: passive 
+          log-level: verbose
